--- a/index.html
+++ b/index.html
@@ -5,34 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet"> -->
+    <title>Batman | HOME</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><img src="Assets/Logos/logohome.png" alt=""></li>
-            <li id="home">HOME</li>
-        </ul>
-    </nav>
-    <div class="droite">
-        <ul>
-            <li class="fleche"><img src="Assets/Logos/logo_bat_flèche.png" alt="logo_bat_flèche"></li>
-            <li><img src="Assets/Logos/icon_facebook.png" alt="icon_facebook"></li>
-            <li><img src="Assets/Logos/icon_ig.png" alt="instagram"></li>
-            <li><img src="Assets/Logos/icon_tw.png" alt="twitter"></li>
-            <li class="fleche"><img src="Assets/Logos/logo_bat_flèche_2.png" alt="logo_bat_flèche_2"></li>
-        </ul>
-    </div>
-    <div class="intro">
-        <p>Au nom de ses parents assassinés, Bruce Wayne mène <br> une guerre éternelle contre les 
-            criminels de Gotham City. <br> Il est vengeur. Il est la nuit.</p>
-            <h2>Il est Batman.</h2>
-            <button>VOIR LE HEROS</button>
-            <button>LES ADVERSAIRES</button>
-    </div>
+    <header id="haut">
+        <nav>
+            <ul>
+                <li><img src="Assets/Logos/logohome.png" alt=""></li>
+                <li id="home">HOME</li>
+            </ul>
+        </nav>
+
+        <div class="scrollIcons">
+            <a href="#haut">
+                <img src="./Assets/Logos/logo_bat_flèche.png" alt="">
+            </a>
+            <a href="">
+                <img src="./Assets/Logos/icon_facebook.png" alt="">
+            </a>
+            <a href="">
+                <img class="orig" src="./Assets/Logos/icon_ig.png" alt="">
+            </a>
+            <a href="">
+                <img class="orig" src="./Assets/Logos/icon_tw.png" alt="">
+            </a>
+            <a href="#bas">
+                <img class="orig" src="./Assets/Logos/logo_bat_flèche_2.png" alt="">
+            </a>
+        </div>
+
+
+        <!-- <div class="droite">
+            <ul>
+                <li class="fleche"><img src="Assets/Logos/logo_bat_flèche.png" alt="logo_bat_flèche"></li>
+                <li><img src="Assets/Logos/icon_facebook.png" alt="icon_facebook"></li>
+                <li><img src="Assets/Logos/icon_ig.png" alt="instagram"></li>
+                <li><img src="Assets/Logos/icon_tw.png" alt="twitter"></li>
+                <li class="fleche"><img src="Assets/Logos/logo_bat_flèche_2.png" alt="logo_bat_flèche_2"></li>
+            </ul>
+        </div> -->
+        <section class="container">
+            <div class="part1">
+                <p>Au nom de ses parents assassinés, Bruce Wayne mène <br> une guerre éternelle contre les 
+                    criminels de Gotham City. <br> Il est vengeur. Il est la nuit.</p>
+                <h2>Il est Batman.</h2>
+                <button>VOIR LE HEROS</button>
+                <button>LES ADVERSAIRES</button>
+                <a class="fleche" href=""><img src="./Assets/Logos/flèche_down_header.png" alt=""></a>
+            </div>
+        </section>
+    </header>
+
+    <main>
+        <section class="container">
+            <div class="part2">
+                <h1>BATMAN AU CINÉMA</h1>
+                <p>
+                    Le personnage de Batman est un super héros de l’univers de DC Comics. Il a été créé par le dessinateur Bob Kane et le scénariste Bill Finger et apparaît pour la première fois dans le comic book Detective Comics en 1939. Batman se différencie de Superman,
+                    alors héros majeur de DC, car il n’a aucun pouvoir. Il sera porté au cinema pour la première fois en 1943 par Lewis Wilson et bénéficiera de nombreux reboot, donnant l’occasion à de multiples acteurs d’interpréter l’homme chauve-souris.
+                    Voici les trois derniers :
+                </p>
+            </div>
+
+            <div class="lesTrois">
+                <div class="les3">
+                    <img src="./Assets/Illustrations/Bathome2.png" alt="">
+                    <p>Robert Pattinson <br>(2022)</p>
+                </div>
+                <div class="les3">
+                    <img src="./Assets/Illustrations/Bathome3.png" alt="">
+                    <p>Christian Bale <br>(2006 - 2008 - 2012)</p>
+                </div>
+                <div class="les3">
+                    <img src="./Assets/Illustrations/Bathome4.png" alt="">
+                    <p>Ben Affleck <br>20016- 2017/2020 – 2023</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 </html>
