jusqu'à Bande annonce

--- a/index.html
+++ b/index.html
@@ -18,38 +18,11 @@
         <nav>
             <ul>
                 <li><img src="Assets/Logos/logohome.png" alt=""></li>
-                <li id="home">HOME</li>
+                <li id="home"><a href="">HOME</a></li>
             </ul>
         </nav>
 
-        <div class="scrollIcons">
-            <a href="#haut">
-                <img src="./Assets/Logos/logo_bat_flèche.png" alt="">
-            </a>
-            <a href="">
-                <img src="./Assets/Logos/icon_facebook.png" alt="">
-            </a>
-            <a href="">
-                <img class="orig" src="./Assets/Logos/icon_ig.png" alt="">
-            </a>
-            <a href="">
-                <img class="orig" src="./Assets/Logos/icon_tw.png" alt="">
-            </a>
-            <a href="#bas">
-                <img class="orig" src="./Assets/Logos/logo_bat_flèche_2.png" alt="">
-            </a>
-        </div>
-
-
-        <!-- <div class="droite">
-            <ul>
-                <li class="fleche"><img src="Assets/Logos/logo_bat_flèche.png" alt="logo_bat_flèche"></li>
-                <li><img src="Assets/Logos/icon_facebook.png" alt="icon_facebook"></li>
-                <li><img src="Assets/Logos/icon_ig.png" alt="instagram"></li>
-                <li><img src="Assets/Logos/icon_tw.png" alt="twitter"></li>
-                <li class="fleche"><img src="Assets/Logos/logo_bat_flèche_2.png" alt="logo_bat_flèche_2"></li>
-            </ul>
-        </div> -->
+        <!-- Premiers contenus -->
         <section class="container">
             <div class="part1">
                 <p>Au nom de ses parents assassinés, Bruce Wayne mène <br> une guerre éternelle contre les 
@@ -62,7 +35,29 @@
         </section>
     </header>
 
+    <!-- scroll icons -->
+    <div class="scrollIcons">
+        <a href="#haut">
+            <img src="./Assets/Logos/logo_bat_flèche.png" alt="">
+        </a>
+        <a href="">
+            <img src="./Assets/Logos/icon_facebook.png" alt="">
+        </a>
+        <a href="">
+            <img class="orig" src="./Assets/Logos/icon_ig.png" alt="">
+        </a>
+        <a href="">
+            <img class="orig" src="./Assets/Logos/icon_tw.png" alt="">
+        </a>
+        <a href="#bas">
+            <img class="orig" src="./Assets/Logos/logo_bat_flèche_2.png" alt="">
+        </a>
+    </div>
+
+    <!-- début du contenu principal -->
     <main>
+        <!-------------------------SECONDE PARTIE ------------------------------->
+        <!-- sous-partie1 -->
         <section class="container">
             <div class="part2">
                 <h1>BATMAN AU CINÉMA</h1>
@@ -75,18 +70,125 @@
 
             <div class="lesTrois">
                 <div class="les3">
-                    <img src="./Assets/Illustrations/Bathome2.png" alt="">
-                    <p>Robert Pattinson <br>(2022)</p>
+                    <figure><img src="./Assets/Illustrations/Bathome2.png" alt=""></figure>
+                    <figcaption>Robert Pattinson <br>(2022)</figcaption>
                 </div>
                 <div class="les3">
-                    <img src="./Assets/Illustrations/Bathome3.png" alt="">
-                    <p>Christian Bale <br>(2006 - 2008 - 2012)</p>
+                    <figure><img src="./Assets/Illustrations/Bathome3.png" alt=""></figure>
+                    <figcaption>Christian Bale <br>(2006 - 2008 - 2012)</figcaption>
                 </div>
                 <div class="les3">
-                    <img src="./Assets/Illustrations/Bathome4.png" alt="">
-                    <p>Ben Affleck <br>20016- 2017/2020 – 2023</p>
+                    <figure><img src="./Assets/Illustrations/Bathome4.png" alt=""></figure>
+                    <figcaption>Ben Affleck <br>20016- 2017/2020 – 2023</figcaption>
                 </div>
             </div>
+        </section>
+
+        <!-- sous-partie2 -->
+        <section class="container">
+            <div class="part2" id="nemesis">
+                <img class="ailes" src="./Assets/Illustrations/Bathome13.png" alt="">
+                <h1>NÉMÉSIS</h1>
+                <p>
+                    Batman souhaite éradiquer la criminalité de Gotham. C’est pourquoi, il affrontera la plupart du temps, des vilains sans capacités surnaturelles mais particulièrement violents ou psychopathes. Avec son introduction dans la Justice League il aura l’occasion
+                    de se mesurer à des antagonistes qui défient l’imagination et les lois de la physique. Parmi les derniers ennemis emblématiques que nous avons pu voir au cinéma, on retrouve :
+                </p>
+            </div>
+            <div class="lesTrois">
+                <div class="les3">
+                    <figure><img src="./Assets/Illustrations/Bathome5.png" alt=""></figure>
+                    <figcaption>The Riddler - Paul Dano <br>(2022)</figcaption>
+                </div>
+                <div class="les3">
+                    <figure><img src="./Assets/Illustrations/Bathome6.png" alt=""></figure>
+                    <figcaption>Le Joker - Heath Ledger <br>(2008)</figcaption>
+                </div>
+                <div class="les3">
+                    <figure><img src="./Assets/Illustrations/Bathome7.png" alt=""></figure>
+                    <figcaption>Darkseid - Ray Porter <br>(2022)</figcaption>
+                </div>
+            </div>
+        </section>
+
+        <!-- image de batman à droite -->
+        <section class="container">
+            <div class="imgDroit">
+                <img src="./Assets/Illustrations/Bathome12.png" alt="">
+            </div>
+        </section>
+        
+        <!-- sous-partie3 -->
+        <section class="container">
+            <div class="part2">
+                <h1 id="allies">ALLIES</h1>
+                <p>
+                    Alfred est le majordome des Wayne. A leur mort il s’occupe de l’éducation du jeune Bruce avant de l’assister dans son rôle du Batman. Ce dernier rencontrera Catwoman dès le premier numéro des aventures de l’homme chauve-souris en 1940. Tantôt ennemie
+                    tantôt alliée la jeune femme fatale fera tourner la tête de Batman à maintes reprises. Du côté de la police, Bruce pourra compter sur l’aide infaillible de James Gordon, “Jim”, qui désire lui aussi nettoyer sa ville de la criminalité
+                    qui y règne. 
+                </p>
+            </div>
+            <div class="lesTrois">
+                <div class="les3">
+                    <figure><img src="./Assets/Illustrations/Bathome9.png" alt=""></figure>
+                    <figcaption>Alfred Pennyworth - Michael Cain <br>(2006 - 2008 - 2012)</figcaption>
+                </div>
+                <div class="les3">
+                    <figure><img src="./Assets/Illustrations/Bathome8.png" alt=""></figure>
+                    <figcaption>Catwoman - Zoé Kravitz <br>(2008)</figcaption>
+                </div>
+                <div class="les3">
+                    <figure><img src="./Assets/Illustrations/Bathome10.png" alt=""></figure>
+                    <figcaption>James Gordon <br>(2014-2019)</figcaption>
+                </div>
+            </div>
+            
+            <!-- justice league -->
+            <div class="part2jl">
+                <h1>JUSTICE LEAGUE</h1>
+                <p>
+                    Lorsque la Terre est menacée les plus grands super-héros s’allient pour la protéger. Ils doivent cependant apprendre à se faire confiance mutuellement et à faire équipe ce qui ne sera pas chose aisée. Ensemble ils forment la Justice League, les plus grands
+                    super-héros de la Terre, ceux vers qui le monde entier se tourne lorsque les menaces extraterrestres ou surnaturelles menacent son existence. </p>
+            </div>
+        </section>
+
+        <div class="heros">
+            <img id="imgBat11" src="./Assets/Illustrations/Bathome11.png" alt="">
+        </div>
+
+        <!-- sous-partie5 -->
+        <section class="container">
+            <div class="part2">
+                <h1>MULTIMÉDIA</h1>
+            </div>
+            <div class="multimedia">
+                <div class="direction">
+                    <a href="">
+                        <img src="./Assets/Logos/icon_flèche_1.png" alt="">
+                    </a>
+                </div>
+
+                <img class="begin" src="./Assets/Illustrations/Bathome_ba1.png" alt="">
+                <div class="action">
+                    <h5>ACTION, ADVENTURE</h5>
+                    <h4>Batman Begins</h4>
+                    <h6>IMDB : <span style="color:yellow">8.2</span></h6>
+                    <p>Le jeune Bruce Wayne assiste impuissant au meurtre de ses parents. Profondément traumatisé, il grandit obnubilé par un désir de vengeance. La Ligue des ombres, une secte de guerriers ninja dirigée par Ra's al Ghul, se chargera
+                        de son entraînement. De retour chez lui à Gotham, avec l'aide de son majordome Alfred Pennyworth, Bruce Wayne se lance alors dans la lutte contre le crime sous le nom de Batman.
+                    </p>
+                </div>
+                <div class="direction">
+                    <a href="">
+                        <img src="./Assets/Logos/icon_flèche_2.png" alt="">
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="bande">
+                <img id="imgBat_ba2" src="./Assets/Illustrations/Bathome_ba2.png" alt="">
+            </div>
+
+
         </section>
     </main>
 
