--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet"> -->
     <title>Batman | HOME</title>
 </head>
 <body>
@@ -142,7 +136,7 @@
                 </div>
             </div>
             
-            <!-- justice league -->
+        <!-- justice league -->
             <div class="part2jl">
                 <h1>JUSTICE LEAGUE</h1>
                 <p>
@@ -155,7 +149,7 @@
             <img id="imgBat11" src="./Assets/Illustrations/Bathome11.png" alt="">
         </div>
 
-        <!-- sous-partie5 -->
+        <!-- sous-partie4 -->
         <section class="container">
             <div class="part2">
                 <h1>MULTIMÉDIA</h1>
@@ -171,7 +165,7 @@
                 <div class="action">
                     <h5>ACTION, ADVENTURE</h5>
                     <h4>Batman Begins</h4>
-                    <h6>IMDB : <span style="color:yellow">8.2</span></h6>
+                    <h6>IMDB : <span style="color:#ffff00">8.2</span></h6>
                     <p>Le jeune Bruce Wayne assiste impuissant au meurtre de ses parents. Profondément traumatisé, il grandit obnubilé par un désir de vengeance. La Ligue des ombres, une secte de guerriers ninja dirigée par Ra's al Ghul, se chargera
                         de son entraînement. De retour chez lui à Gotham, avec l'aide de son majordome Alfred Pennyworth, Bruce Wayne se lance alors dans la lutte contre le crime sous le nom de Batman.
                     </p>
@@ -183,14 +177,103 @@
                 </div>
             </div>
 
-
             <div class="bande">
                 <img id="imgBat_ba2" src="./Assets/Illustrations/Bathome_ba2.png" alt="">
             </div>
-
+        </section>
+        <section class="contact">
+            <div class="form">
+                <h1>PRENONS CONTACT</h1>
+                <form action="">
+                    <label class="titre" for="email">ADRESSE EMAIL</label>
+                    <input type="email" name="email" placeholder="Adresse email">
+                    <label class="titre" for="newsletter">NEWSLETTER</label>
+                    <label class="cocher" for=""> En cochant cette case vous acceptez de recevoir l’actualité concernant les <br> aventures de Batman :</label>
+                    <input type="checkbox">
+                    <div class="report">
+                        <p class="news">Choisissez la fréquence à laquelle vous souhaitez recevoir votre newsletter <img class="icon" src="./Assets/Logos/icon_flèche_2.png" alt=""></p>  
+                    </div>
+                    <div class="report">
+                        <p class="news"> Souhaitez-vous recevoir des news</p>
+                    </div>
+                    <div class="btn-group">
+                       <button>Des films</button>
+                       <button>Des comics</button>
+                       <button>De tout</button>
+                    </div>
+                    <label class="titre">MESSAGE</label>
+                    <textarea name="" id="" placeholder="Laissez un commentaire pour la communauté"></textarea>
+                    <input type="submit" value="CONFIRMER">
+                </form>
+            </div>
 
         </section>
     </main>
 
+    <!-- Citation -->
+    <section class="container" id="citation">
+        <div class="container2">
+            <div class="g-open">
+                <img src="./Assets/Logos/icon_guillemets_1.png" alt="">
+            </div>
+            <div class="citation-carte">
+                <p class="citation-texte">La seule façon raisonnable de vivre en ce bas monde, c'est en dehors des règles.</p>
+
+                <p class="citation-auteur">The Dark Knight : Le Chevalier Noir - <br> Le Joker à Batman (2008)</p>
+            </div>
+
+            <div class="ronds">
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="#0033cc"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+                <svg>
+                    <circle cx="8" cy="8" r="2.5" stroke="#0033cc" stroke-width="1" fill="tranparent"></circle>
+                </svg>
+            </div>
+            <div class="g-close">
+                <img src="./Assets/Logos/icon_guillemets_2.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Pied de page -->
+    <footer class="container">
+        <div class="container2">
+            <div class="text">
+                <img src="./Assets/Logos/icon_WB.png" alt="">
+                <span> Ce projet respecte l’univers cinématographique des films Batman récents. Version Nolan & Snyder & Reeves</span>
+            </div>
+            <div class="social">
+                <a href="" class="social-items"><img src="./Assets/Logos/logo_sayna_white.png" alt=""></a>
+                <a href=""><img src="./Assets/Logos/icon_x.png" alt=""></a>
+                <a href=""> <img src="./Assets/Logos/icon_DC.png" alt="" style="margin-right: 2%;"></a>
+                <a class="social-items" href=""><img src="./Assets/Logos/icon_facebook.png" alt=""></a>
+                <a class="social-items" href=""><img src="./Assets/Logos/icon_ig.png" alt=""></a>
+                <a class="social-items" href=""><img src="./Assets/Logos/icon_tw.png" alt=""></a>
+            </div>
+
+        </div>
+    </footer>
 </body>
 </html>
